# mspr2

./: README.md  kedro_new.yml
mspr2_kedro/: README.md  pyproject.toml  requirements.txt
mspr2_kedro/conf/base/: catalog.yml  parameters.yml
mspr2_kedro/src/mspr2_kedro/: __init__.py  __main__.py  settings.py
mspr2_kedro/src/mspr2_kedro/datasets/: simple.py
mspr2_kedro/src/mspr2_kedro/etl_steps/: extract.py  load.py  transform.py
mspr2_kedro/src/mspr2_kedro/pipelines/: __init__.py
mspr2_kedro/src/mspr2_kedro/pipelines/etl/: nodes.py  pipeline.py
mspr2_kedro/src/mspr2_kedro/pipelines/modeling/: nodes.py  pipeline.py
