[build-system]
requires = [ "setuptools",]
build-backend = "setuptools.build_meta"

[project]
requires-python = ">=3.9"
name = "mspr2_kedro"
readme = "README.md"
dynamic = [ "version",]
dependencies = [ "ipython>=8.10", "jupyterlab>=3.0", "notebook", "kedro~=0.19.13",]

[project.scripts]
mspr2_kedro = "mspr2_kedro.__main__:main"

[tool.kedro]
package_name = "mspr2_kedro"
project_name = "Amazing Customers"
kedro_init_version = "0.19.13"
tools = "['None']"
example_pipeline = "False"
source_dir = "src"

[project.entry-points."kedro.hooks"]

[tool.setuptools.dynamic.version]
attr = "mspr2_kedro.__version__"

[tool.setuptools.packages.find]
where = [ "src",]
namespaces = false

[tool.kedro_telemetry]
project_id = "9d96a23635a44bedb7c8345e2a4b590a"
